--- a/locker size UI/index2.html
+++ b/locker size UI/index2.html
@@ -354,6 +354,7 @@
                             </svg>&nbsp;
                             Add New                    
                         </button>
+
                         <!-- ======================== NEW UNITS MODAL ============================== -->
                         <div class="modal fade" id="newUnit" tabindex="-1" role="dialog" aria-labelledby="unitsmodal" aria-hidden="true">
                             <div class="modal-dialog" role="document">
@@ -369,16 +370,17 @@
                                             Unit ID:<br>
                                             <input type="text" class="form-control" id="new_unit_id" />
                                             <br> Unit Name:<br>
-                                            <input type="text" class="form-control" id="new_unit_address" />
+                                            <input type="text" class="form-control" id="new_unit_name" />
                                         </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                                            <button type="button" class="btn btn-primary" data-dismiss="modal" id="add_new">Add</button>
+                                            <button type="button" class="btn btn-primary" data-dismiss="modal" id="add_new_unit">Add</button>
                                         </div>
                                     </form>
                                 </div>
                             </div>
                         </div><br>
+
                         <!-- ==================== NEW UNITS DATA =================== -->
                         <div id="new_units_data" style="margin-top:1%;display:flex; justify-content: space-evenly;flex-wrap: wrap;">
                             <!-- <div class="card border-3" style="width: 18rem;margin:1%;">
@@ -391,6 +393,8 @@
                                 </div>
                             </div> -->
                         </div>
+
+                        <!-- ======================== EDIT UNITS MODAL ============================== -->
                         <div class="modal fade" id="editUnit" tabindex="-1" role="dialog" aria-labelledby="editunitsmodal" aria-hidden="true">
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
@@ -409,7 +413,7 @@
                                         </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                                            <button type="button" class="btn btn-primary" data-dismiss="modal" id="edit_unit">Edit</button>
+                                            <button type="button" class="btn btn-primary" data-dismiss="modal" id="add_edit_unit">Edit</button>
                                         </div>
                                     </form>
                                 </div>
