--- a/locker size UI/index2.html
+++ b/locker size UI/index2.html
@@ -132,7 +132,7 @@
                                                 <tbody>
                                                     <!-- ======= MONDAY ===== -->
                                                     <tr>
-                                                        <td scope="row"><input class="checkbox" type="checkbox" class="form-check-input" id="check_mon"></td>
+                                                        <td scope="row"><input class="checkbox_new" type="checkbox" class="form-check-input" id="check_mon"></td>
                                                         <td><label class="form-check-label" for="check_mon">Monday</label></td>
                                                         <td>
                                                             <input class="carrier_time form-control" id="monStime" value="" style="max-width: 90px;display:inline" data-default="20:48">
@@ -141,7 +141,7 @@
                                                     </tr>
                                                     <!-- ======= TUESDAY ===== -->
                                                     <tr>
-                                                        <th scope="row"><input class="checkbox" type="checkbox" class="form-check-input" id="check_tues"></th>
+                                                        <th scope="row"><input class="checkbox_new" type="checkbox" class="form-check-input" id="check_tues"></th>
                                                         <td><label class="form-check-label" for="check_tues">Tuesday</label></td>
                                                         <td>
                                                             <input class="carrier_time form-control" id="tuesStime" value="" style="max-width: 90px;display:inline" data-default="20:48" disabled>
@@ -149,7 +149,7 @@
                                                     </tr>
                                                     <!-- ======= WEDNESDAY ===== -->
                                                     <tr>
-                                                        <th scope="row"><input class="checkbox" type="checkbox" class="form-check-input" id="check_wed"></th>
+                                                        <th scope="row"><input class="checkbox_new" type="checkbox" class="form-check-input" id="check_wed"></th>
                                                         <td><label class="form-check-label" for="check_wed">Wednesday</label></td>
                                                         <td>
                                                             <input class="carrier_time form-control" id="wedStime" value="" style="max-width: 90px;display:inline" data-default="20:48" disabled>
@@ -157,7 +157,7 @@
                                                     </tr>
                                                     <!-- ======= THURSDAY ===== -->
                                                     <tr>
-                                                        <th scope="row"><input class="checkbox" type="checkbox" class="form-check-input" id="check_thurs"></th>
+                                                        <th scope="row"><input class="checkbox_new" type="checkbox" class="form-check-input" id="check_thurs"></th>
                                                         <td><label class="form-check-label" for="check_thurs">Thursday</label></td>
                                                         <td>
                                                             <input class="carrier_time form-control" id="thursStime" value="" style="max-width: 90px;display:inline" data-default="20:48" disabled>
@@ -165,7 +165,7 @@
                                                     </tr>
                                                     <!-- ======= FRIDAY ===== -->
                                                     <tr>
-                                                        <th scope="row"><input class="checkbox" type="checkbox" class="form-check-input" id="check_fri"></th>
+                                                        <th scope="row"><input class="checkbox_new" type="checkbox" class="form-check-input" id="check_fri"></th>
                                                         <td><label class="form-check-label" for="check_fri">Friday</label></td>
                                                         <td>
                                                             <input class="carrier_time form-control" id="friStime" value="" style="max-width: 90px;display:inline" data-default="20:48" disabled>
@@ -173,7 +173,7 @@
                                                     </tr>
                                                     <!-- ======= SATURDAY ===== -->
                                                     <tr>
-                                                        <th scope="row"><input class="checkbox" type="checkbox" class="form-check-input" id="check_sat"></th>
+                                                        <th scope="row"><input class="checkbox_new" type="checkbox" class="form-check-input" id="check_sat"></th>
                                                         <td><label class="form-check-label" for="check_sat">Saturday</label></td>
                                                         <td>
                                                             <input class="carrier_time form-control" id="satStime" value="" style="max-width: 90px;display:inline" data-default="20:48" disabled>
@@ -181,7 +181,7 @@
                                                     </tr>
                                                     <!-- ======= SUNDAY ===== -->
                                                     <tr>
-                                                        <th scope="row"><input class="checkbox" type="checkbox" class="form-check-input" id="check_sun"></th>
+                                                        <th scope="row"><input class="checkbox_new" type="checkbox" class="form-check-input" id="check_sun"></th>
                                                         <td><label class="form-check-label" for="check_sun">Sunday</label></td>
                                                         <td>
                                                             <input class="carrier_time form-control" id="sunStime" value="" style="max-width: 90px;display:inline" data-default="20:48" disabled>
