--- a/locker size UI/index.html
+++ b/locker size UI/index.html
@@ -46,8 +46,8 @@
         </div>
 
         <div>
-            <button id="increasing_order" type="submit" class="btn btn-link" data-toggle="tooltip" data-placement="bottom" title="Sort in increasing order" style="height:50%;"><i class="fa fa-arrow-circle-up" style="font-size:30px;color:white" aria-hidden="true"></i></button>
-            <button id="decreasing_order" type="submit" class="btn btn-link" data-toggle="tooltip" data-placement="bottom" title="Sort in decreasing order" style="height:50%;"><i class="fa fa-arrow-circle-down" style="font-size:30px;color:white" aria-hidden="true"></i></button>
+            <button id="increasingOrder" type="submit" class="btn btn-link" data-toggle="tooltip" data-placement="bottom" title="Sort in increasing order" style="height:50%;"><i class="fa fa-arrow-circle-up" style="font-size:30px;color:white" aria-hidden="true"></i></button>
+            <button id="decreasingOrder" type="submit" class="btn btn-link" data-toggle="tooltip" data-placement="bottom" title="Sort in decreasing order" style="height:50%;"><i class="fa fa-arrow-circle-down" style="font-size:30px;color:white" aria-hidden="true"></i></button>
         </div>
         <button type="button" class="btn btn-light" data-toggle="modal" data-placement="bottom" data-target="#newEntry" style="margin-top:5px;">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" height="20px" width="20px" x="0px" y="0px" viewBox="0 0 27.963 27.963" style="enable-background:new 0 0 27.963 27.963;" xml:space="preserve">
@@ -73,13 +73,13 @@
                     <form>
                         <div class="modal-body">
                             Property Name:<br>
-                            <input type="text" class="form-control" id="new_property" />
+                            <input type="text" class="form-control" id="newProperty" />
                             <br> Address:<br>
-                            <input type="text" class="form-control" id="new_address" />
+                            <input type="text" class="form-control" id="newAddress" />
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                            <button type="button" class="btn btn-primary" data-dismiss="modal" id="add_new">Add</button>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal" id="addNewProperty">Add</button>
                         </div>
                     </form>
                 </div>
@@ -89,7 +89,7 @@
     <hr>
 
     <!-- ==================================== LIST ITEMS CONTAINER =================================================== -->
-    <div class="container-scrollable" id="body_middle" style="display:flex;justify-content: space-evenly; flex-wrap:wrap; padding:1%;">
+    <div class="container-scrollable" id="propertyDisplay" style="display:flex;justify-content: flex-start; flex-wrap:wrap; padding:1%;">
 
     </div>
     <!-- ==================================== FOOTER CONTAINER =================================================== -->
