--- a/locker size UI/index2.html
+++ b/locker size UI/index2.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+    <!-- 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script> -->
     <link rel="stylesheet" type="text/css" href="http://weareoutman.github.io/clockpicker/dist/jquery-clockpicker.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.0.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
@@ -45,7 +47,7 @@
                 <path fill="#17A2B8"
                     d="m440 448v-49.960938c10.546875-6.214843 16.726562-17.816406 16-30.039062 0-17.671875-10.742188-32-24-32s-24 14.328125-24 32c-.726562 12.222656 5.453125 23.824219 16 30.039062v49.960938h-56v-243.054688l-48-24v43.054688h24v16h-24v32h24v16h-24v32h24v16h-24v32h24v16h-24v32h24v16h-24v16h-16v-321.96875l-96-27.421875v29.390625h56v16h-56v32h56v16h-56v32h56v16h-56v32h56v16h-56v32h56v16h-56v32h56v16h-56v32h56v16h-56v16h-16v-448h-144v32h72v16h-72v32h72v16h-72v32h72v16h-72v32h72v16h-72v32h72v16h-72v32h72v16h-72v32h72v16h-72v32h72v16h-72v32h72v16h-72v16h-48v16h480v-16zm0 0" />
             </svg>&nbsp;&nbsp;
-            <p id="p_name">Property Name:</p>
+            <p id="propertyName" style="margin:3px;">Property Name:</p>
         </div>
 
         <!-- ========= Property Address ========= -->
@@ -57,12 +59,13 @@
                 <path fill="#17A2B8"
                     d="m160.144531 443.289062c30.101563-37.585937 160-204.328124 160-283.289062 0-88.367188-71.636719-160-160-160-88.367187 0-160 71.632812-160 160 0 78.976562 129.894531 245.710938 160 283.289062zm-108.878906-313.601562 104-80c2.875-2.214844 6.882813-2.214844 9.757813 0l104 80c2.691406 2.097656 3.757812 5.667969 2.65625 8.894531-1.097657 3.226563-4.125 5.402344-7.535157 5.417969h-24v88c0 4.417969-3.582031 8-8 8h-144c-4.417969 0-8-3.582031-8-8v-88h-24c-3.421875 0-6.464843-2.179688-7.570312-5.421875-1.101563-3.242187-.019531-6.824219 2.691406-8.914063zm0 0" />
             </svg>&nbsp;&nbsp;
-            <p id="p_address">Address:Address:Address:Address:Address:</p>
+            <p id="propertyAddress" style="margin:3px;">Property Address:</p>
         </div>
 
         <!-- ========= Analyse Button ========= -->
         <div align="center" style="min-width:250px;">
-            <button type="button" id="analyse-btn" class="btn btn-info rounded-pill" style="margin-top:1%;"> Analyse Property </button>
+            <button type="button" id="analyse-btn" class="btn btn-info rounded-pill" style="margin-top:1%;"> Analyse
+                Property </button>
         </div>
 
 
@@ -119,17 +122,26 @@
                                     </div>
                                     <form>
                                         <div class="modal-body">
-                                            <div style="display:flex;justify-content: space-evenly;">
-                                                <div>
-                                                    Carrier ID:<br>
-                                                    <input type="text" class="form-control" id="n_carrier_id" />
-                                                </div>
-                                                <div>
-                                                    Carrier Name:<br>
-                                                    <input type="text" class="form-control" id="n_carrier_name" />
-                                                </div>
+                                            <!-- <div>
+                                                Carrier ID:<br>
+                                                <input type="text" class="form-control" id="n_carrier_id" />
+                                            </div> -->
 
+                                            <div style="text-align: center;">
+                                                <select class="ui search selection dropdown" id="n_carrier_name" height="50px">
+                                                    <option value="" selected disabled>Choose carrier</option>
+                                                    <option value="AL">Alabama</option>
+                                                    <option value="AK">Alaska</option>
+                                                    <option value="AZ">Arizona</option>
+                                                    <option value="AR">Arkansas</option>
+                                                    <option value="CA">California</option>
+                                                </select>
                                             </div>
+
+                                            <!-- <input type="text" class="form-control" id="n_carrier_name" /> -->
+
+
+
                                             <br>
                                             <table class="table">
                                                 <thead>
@@ -198,8 +210,8 @@
                                                     </tr>
                                                 </tbody>
                                             </table>
-
                                         </div>
+
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                                             <button type="button" class="btn btn-primary" data-dismiss="modal" id="add_new_carrier">Add</button>
@@ -209,8 +221,9 @@
                                 </div>
                             </div>
                         </div>
+
                         <!-- =========================== NEW CARRIER DATA ================= -->
-                        <div id="new_carrier_data" style="margin-top:1%;display:flex; justify-content: space-evenly;flex-wrap: wrap;">
+                        <div id="new_carrier_data" style="margin-top:1%;padding:1%;display:flex; justify-content: flex-start;flex-wrap: wrap;">
                         </div>
                     </div>
 
@@ -264,7 +277,7 @@
                         </div><br>
 
                         <!-- ==================== NEW UNITS DATA =================== -->
-                        <div id="new_units_data" style="margin-top:1%;display:flex; justify-content: space-evenly;flex-wrap: wrap;">
+                        <div id="new_units_data" style="margin-top:1%;display:flex; justify-content: flex-start;flex-wrap: wrap;">
                             <!-- <div class="card border-3" style="width: 18rem;margin:1%;">
                                 <div class="card-body">
                                     <h5 class="card-title">Alap Heights</h5>
@@ -309,18 +322,23 @@
         </div>
 
     </div>
-    <script>
-        $('.carrier_time_down').clockpicker({
-            placement: 'bottom',
-            autoclose: true,
-        });
-        var input = $('.carrier_time');
-        input.clockpicker({
-            placement: 'top',
-            autoclose: true,
 
+    <script>
+        $(document).ready(function() {
+            $('.carrier_time_down').clockpicker({
+                placement: 'bottom',
+                autoclose: true,
+            });
+            var input = $('.carrier_time');
+            input.clockpicker({
+                placement: 'top',
+                autoclose: true,
+
+            });
+            $('#n_carrier_name').dropdown();
         });
     </script>
+
     <div id="snackbar">Some text some message..</div>
 
 </body>
