--- a/locker size UI/index3.html
+++ b/locker size UI/index3.html
@@ -37,7 +37,7 @@
                 <path fill="#F6F6F6"
                     d="m440 448v-49.960938c10.546875-6.214843 16.726562-17.816406 16-30.039062 0-17.671875-10.742188-32-24-32s-24 14.328125-24 32c-.726562 12.222656 5.453125 23.824219 16 30.039062v49.960938h-56v-243.054688l-48-24v43.054688h24v16h-24v32h24v16h-24v32h24v16h-24v32h24v16h-24v32h24v16h-24v16h-16v-321.96875l-96-27.421875v29.390625h56v16h-56v32h56v16h-56v32h56v16h-56v32h56v16h-56v32h56v16h-56v32h56v16h-56v32h56v16h-56v16h-16v-448h-144v32h72v16h-72v32h72v16h-72v32h72v16h-72v32h72v16h-72v32h72v16h-72v32h72v16h-72v32h72v16h-72v32h72v16h-72v32h72v16h-72v16h-48v16h480v-16zm0 0" />
             </svg>&nbsp;&nbsp;
-            <p id="p_name" style="color:white">Property Name:</p>
+            <p id="propertyName" style="color:white">Property Name:</p>
         </div>
 
         <!-- ========= Property Address ========= -->
@@ -49,16 +49,21 @@
                 <path fill="#F6F6F6"
                     d="m160.144531 443.289062c30.101563-37.585937 160-204.328124 160-283.289062 0-88.367188-71.636719-160-160-160-88.367187 0-160 71.632812-160 160 0 78.976562 129.894531 245.710938 160 283.289062zm-108.878906-313.601562 104-80c2.875-2.214844 6.882813-2.214844 9.757813 0l104 80c2.691406 2.097656 3.757812 5.667969 2.65625 8.894531-1.097657 3.226563-4.125 5.402344-7.535157 5.417969h-24v88c0 4.417969-3.582031 8-8 8h-144c-4.417969 0-8-3.582031-8-8v-88h-24c-3.421875 0-6.464843-2.179688-7.570312-5.421875-1.101563-3.242187-.019531-6.824219 2.691406-8.914063zm0 0" />
             </svg>&nbsp;&nbsp;
-            <p id="p_address" style="color:white">Address:Address:Address:Address:Address: </p>
+            <p id="propertyAddress" style="color:white">Address:Address:Address:Address:Address: </p>
         </div>
     </div>
     <hr>
 
-    <!-- =============================== CALENDER ======================================== -->
-    <div style="text-align: center">
-        <input class="form-control" id="dateRangeInput" type="text" name="daterange" value="01/07/2019 - 01/09/2019" style="max-width:300px;display:inline;border-color: #17A2B8; border-width:2px;text-align: center" />
+    <!-- =============================== CALENDER + TOLERANCE INPUT ======================================== -->
+    <div align="center" style="display:flex;justify-content: space-evenly">
+        <input class="form-control" id="dateRangeInput" type="text" name="daterange" style="max-width:300px;display:inline;border-color: #17A2B8; border-width:2px;text-align: center" />
+        <div style="display:flex;min-width:200px;">
+            <p style="margin:5px;"><b>Tolerance(%):</b></p>
+            <input type="number" class="form-control" name="percentage" min="0" max="100" value="80" style="margin-left:10px;border-color: #17A2B8; border-width:2px;">
+        </div>
     </div>
     <br>
+
     <!-- =========================== GRAPHS =============================================== -->
     <div id="allgraphs" style="display:flex;flex-wrap: wrap;justify-content: space-evenly;">
 
