--- a/locker size UI/index.html
+++ b/locker size UI/index.html
@@ -10,56 +10,47 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="bundle.js"></script>
+    <script src="bundle/bundle.js"></script>
+    <link rel="stylesheet" href="style/style.css">
     <title>Locker Size Recommender</title>
 </head>
-<style>
-    html,
-    body {
-        height: 100%;
-        width: 100%;
-    }
-    
-    .container-fluid {
-        padding-top: 1%;
-        padding-left: 1%;
-    }
-    
-    .card {
-        width: 15rem;
-        margin-top: 1%;
-    }
-</style>
+
 
 <body>
     <!-- ==================================== HEADER CONTAINER =================================================== -->
-    <div class="container-fluid" id="top_header" style="background-color: #17A2B8;display:flex; justify-content: space-evenly; flex-wrap:wrap;padding:1%;">
-        <img src="logo.jpg" class="rounded-pill" style="width: 13%; min-width: 140px">
+    <div id="top_header">
+        <img src="logo.jpg" class="logo rounded-pill">
 
-        <div class="p-1 bg-light rounded rounded-pill" style="width: 50% !important; min-width:300px !important;">
-            <div class="input-group form-group" style="margin:0;">
+        <div class="p-1 bg-light header-container rounded rounded-pill">
+            <div class="input-group form-group">
                 <div class="input-group-prepend">
-                    <button id="button-addon2" type="submit" class="btn btn-link text-info"><i class="fa fa-search" aria-hidden="true"></i></button>
+                    <button id="button-addon2" type="submit" class="btn btn-link text-info"><i class="fa fa-search"
+                            aria-hidden="true"></i></button>
                 </div>
-                <input type="search" id="txt-search" placeholder="What are you searching for?" aria-describedby="button-addon2" style="border-radius: 10px" class="form-control border-0 bg-light">
+                <input type="search" id="txt-search" placeholder="What are you searching for?" aria-describedby="button-addon2" class="form-control border-0 bg-light">
             </div>
         </div>
 
-        <div>
-            <button id="increasingOrder" type="submit" class="btn btn-link" data-toggle="tooltip" data-placement="bottom" title="Sort in increasing order" style="height:50%;"><i class="fa fa-arrow-circle-up" style="font-size:30px;color:white" aria-hidden="true"></i></button>
-            <button id="decreasingOrder" type="submit" class="btn btn-link" data-toggle="tooltip" data-placement="bottom" title="Sort in decreasing order" style="height:50%;"><i class="fa fa-arrow-circle-down" style="font-size:30px;color:white" aria-hidden="true"></i></button>
+        <div class="sort-btn-grp">
+            <button id="increasingOrder" type="submit" class="btn btn-link" data-toggle="tooltip" data-placement="bottom" title="Sort in increasing order"><i class="fa fa-arrow-circle-up"
+                    aria-hidden="true"></i></button>
+            <button id="decreasingOrder" type="submit" class="btn btn-link" data-toggle="tooltip" data-placement="bottom" title="Sort in decreasing order"><i class="fa fa-arrow-circle-down"
+                    aria-hidden="true"></i></button>
         </div>
-        <button type="button" class="btn btn-light" data-toggle="modal" data-placement="bottom" data-target="#newEntry" style="margin-top:5px;">
-            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" height="20px" width="20px" x="0px" y="0px" viewBox="0 0 27.963 27.963" style="enable-background:new 0 0 27.963 27.963;" xml:space="preserve">
+        <button type="button" class="btn btn-light" data-toggle="modal" data-placement="bottom" data-target="#newEntry">
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1"
+                height="20px" width="20px" x="0px" y="0px" viewBox="0 0 27.963 27.963"
+                style="enable-background:new 0 0 27.963 27.963;" xml:space="preserve">
                 <g>
                     <g id="c140__x2B_">
-                        <path fill= "#17A2B8" d="M13.98,0C6.259,0,0,6.26,0,13.982s6.259,13.981,13.98,13.981c7.725,0,13.983-6.26,13.983-13.981    C27.963,6.26,21.705,0,13.98,0z M21.102,16.059h-4.939v5.042h-4.299v-5.042H6.862V11.76h5.001v-4.9h4.299v4.9h4.939v4.299H21.102z    "/>
+                        <path fill="#17A2B8"
+                            d="M13.98,0C6.259,0,0,6.26,0,13.982s6.259,13.981,13.98,13.981c7.725,0,13.983-6.26,13.983-13.981    C27.963,6.26,21.705,0,13.98,0z M21.102,16.059h-4.939v5.042h-4.299v-5.042H6.862V11.76h5.001v-4.9h4.299v4.9h4.939v4.299H21.102z    " />
                     </g>
                     <g id="Capa_1_9_">
                     </g>
-                </g>                            
+                </g>
             </svg>
-            Add New                    
+            Add New
         </button>
         <div class="modal fade" id="newEntry" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
@@ -67,8 +58,8 @@
                     <div class="modal-header">
                         <h5 class="modal-title" id="exampleModalLabel">Add New Property</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                    </button>
+                            <span aria-hidden="true">&times;</span>
+                        </button>
                     </div>
                     <form>
                         <div class="modal-body">
@@ -89,12 +80,14 @@
     <hr>
 
     <!-- ==================================== LIST ITEMS CONTAINER =================================================== -->
-    <div class="container-scrollable" id="propertyDisplay" style="display:flex;justify-content: flex-start; flex-wrap:wrap; padding:1%;">
+    <div class="container-scrollable" id="propertyDisplay">
 
     </div>
     <!-- ==================================== FOOTER CONTAINER =================================================== -->
     <div class="container-fluid" id="bottom_end">
     </div>
+    <!-- =============================================SNACKBAR=================================================== -->
+    <div id="snackbar">Some text some message..</div>
 </body>
 
 </html>
