--- a/locker size UI/index3.html
+++ b/locker size UI/index3.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style3.css">
+    <link rel="stylesheet" href="style/style3.css">
 </head>
 <title>Analysis</title>
 </head>
@@ -81,7 +81,7 @@
 
     </div>
     <br>
-    <script src="bundle3.js"></script>
+    <script src="bundle/bundle3.js"></script>
 
 </body>
 
