Added logging + TS files divison

--- a/locker size UI/index.html
+++ b/locker size UI/index.html
@@ -19,7 +19,7 @@
 <body>
     <!-- ==================================== HEADER CONTAINER =================================================== -->
     <div id="top_header">
-        <img src="logo.jpg" class="logo rounded-pill">
+        <img src="UIComponenets/logo.jpg" class="logo rounded-pill">
 
         <div class="p-1 bg-light header-container rounded rounded-pill">
             <div class="input-group form-group">
