--- a/locker size UI/index2.html
+++ b/locker size UI/index2.html
@@ -37,7 +37,7 @@
 
         <!-- ========= App Logo ========= -->
         <div class="rounded-circle" style="text-align: center;">
-            <img src="logo.jpg" class="rounded-pill" width="43%">
+            <img src="UIComponenets/logo.jpg" class="rounded-pill" width="43%">
 
         </div>
 
@@ -129,18 +129,9 @@
                                             <div style="text-align: center;">
                                                 <select class="ui search selection dropdown" id="n_carrier_name" height="50px">
                                                     <option value="" selected disabled>Choose carrier</option>
-                                                    <!-- <option value="AL">Alabama</option>
-                                                    <option value="AK">Alaska</option>
-                                                    <option value="AZ">Arizona</option>
-                                                    <option value="AR">Arkansas</option>
-                                                    <option value="CA">California</option> -->
+                                                    
                                                 </select>
                                             </div>
-
-                                            <!-- <input type="text" class="form-control" id="n_carrier_name" /> -->
-
-
-
                                             <br>
                                             <table class="table">
                                                 <thead>
