--- a/locker size UI/index3.html
+++ b/locker size UI/index3.html
@@ -27,7 +27,7 @@
 
         <!-- ========= App Logo ========= -->
         <div class="rounded-circle" style="text-align: center;">
-            <img src="logo.jpg" class="rounded-pill" width="45%">
+            <img src="UIComponenets/logo.jpg" class="rounded-pill" width="45%">
 
         </div>
 
